--- a/SmartMemeSearch.Wpf/MainWindow.xaml
+++ b/SmartMemeSearch.Wpf/MainWindow.xaml
@@ -19,6 +19,7 @@
         <SolidColorBrush x:Key="Win11ButtonHover" Color="#DDDDDD"/>
         <SolidColorBrush x:Key="Win11Text" Color="#202020"/>
 
+
         <!-- Modern default font (Segoe UI Variable) -->
         <Style TargetType="TextBlock">
             <Setter Property="FontFamily" Value="Segoe UI Variable"/>
@@ -148,6 +149,7 @@
         <!-- Your existing converters & context menu -->
         <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         <conv:BoolToVisibilityInverseConverter x:Key="BoolToVisibilityInverseConverter" />
+        <conv:TileWidthConverter x:Key="TileWidthConverter"/>
 
 
         <!-- ContextMenu instead of WinUI MenuFlyout -->
@@ -228,13 +230,18 @@
 
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <StackPanel Orientation="Vertical"/>
+                        <WrapPanel x:Name="Wrap"
+                            Orientation="Vertical"
+                            IsItemsHost="True" />
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
 
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Border Margin="4"
+                        Width="{Binding ElementName=ResultsList,
+                            Path=ActualWidth,
+                            Converter={StaticResource TileWidthConverter}}"
                         Height="210"
                         Background="{StaticResource Win11Card}"
                         BorderBrush="{StaticResource Win11Border}"
@@ -270,13 +277,26 @@
                                 <StackPanel Grid.Column="1"
                                         Margin="8"
                                         VerticalAlignment="Top"
-                                        Orientation="Vertical">
+                                        Orientation="Vertical"
+                                        Width="Auto"
+                                        MaxWidth="{Binding ElementName=ResultsList,
+                                            Path=ActualWidth,
+                                            Converter={StaticResource TileWidthConverter}}">
 
                                     <!-- File path -->
                                     <TextBlock Text="{Binding FilePath}"
                                            TextWrapping="NoWrap"
                                            TextTrimming="CharacterEllipsis"
-                                           FontWeight="Bold"/>
+                                           FontWeight="Bold"
+                                           HorizontalAlignment="Left">
+
+                                        <TextBlock.ToolTip>
+                                            <Border Padding="8" MaxWidth="500">
+                                                <TextBlock Text="{Binding FilePath}"
+                                                            TextWrapping="Wrap"/>
+                                            </Border>
+                                        </TextBlock.ToolTip>
+                                    </TextBlock>
 
                                     <!-- Score -->
                                     <TextBlock Text="{Binding Score}"
@@ -285,6 +305,7 @@
                                     <!-- OCR preview -->
                                     <TextBlock Text="{Binding OcrPreview}"
                                             TextWrapping="Wrap"
+                                            HorizontalAlignment="Left"
                                             TextTrimming="CharacterEllipsis"
                                             MaxHeight="60">
 
